--- a/Desarrollo_Colaborativo_de_Software.html
+++ b/Desarrollo_Colaborativo_de_Software.html
@@ -52,11 +52,12 @@
 }
 </style>
 
-<script async="" src="./Desarrollo_Colaborativo_de_Software_files/analytics.js.descarga"></script><script type="text/javascript" src="./Desarrollo_Colaborativo_de_Software_files/dataset-shim.js.descarga"></script>
-<script type="text/javascript" src="./Desarrollo_Colaborativo_de_Software_files/impress.js.descarga"></script>
+<script async="" src="./Desarrollo_Colaborativo_de_Software_files/analytics.js"></script>
+<script type="text/javascript" src="./Desarrollo_Colaborativo_de_Software_files/dataset-shim.js"></script>
+<script type="text/javascript" src="./Desarrollo_Colaborativo_de_Software_files/impress.js"></script>
 
-<script src="./Desarrollo_Colaborativo_de_Software_files/onready.js.descarga"></script>
-<script src="./Desarrollo_Colaborativo_de_Software_files/loadPresentation.js.descarga"></script>
+<script src="./Desarrollo_Colaborativo_de_Software_files/onready.js"></script>
+<script src="./Desarrollo_Colaborativo_de_Software_files/loadPresentation.js"></script>
 <script>
 ready(function() {
     if (document.getElementById('launched-placeholder'))
